RESOLVED FIXED90830
Microdata tests are flaky
https://bugs.webkit.org/show_bug.cgi?id=90830
Summary Microdata tests are flaky
Ryosuke Niwa
Reported 2012-07-09 15:54:06 PDT
Microdata tests are flaky
Attachments
Patch (2.37 KB, patch)
2012-07-09 16:03 PDT, Ryosuke Niwa
koivisto: review+
Ryosuke Niwa
Comment 1 2012-07-09 16:03:16 PDT
Ryosuke Niwa
Comment 2 2012-07-09 16:07:14 PDT
Note You need to log in before you can comment on or make changes to this bug.